# artemis-2

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: deploy-pages.yml
docker/nginx/: default.conf
public/: robots.txt  sitemap.xml
public/assets/data/: ephemeris.json  trajectory.json
public/starmaps/: hiptyc_2020_4k.exr  hiptyc_2020_8k.exr  manifest.json  milkyway_2020_16k.exr  milkyway_2020_4k.exr  milkyway_2020_8k.exr
scripts/: download_starmaps.py  download_textures.py  fetch_ephemeris.py  fetch_trajectory.py  plot_starmap_debug.py  test_visualize.py  utils.py
src/: App.tsx  index.css
src/components/scene/: Atmosphere.tsx  CameraRig.tsx  CelestialBackground.tsx  DebugAxes.tsx  Earth.tsx  GravityField.tsx  Moon.tsx  Planet.tsx  Scene.tsx  Spacecraft.tsx  Starfield.tsx  Sun.tsx  Trajectory.tsx  WorldHud.tsx
src/components/ui/: ArtemisLogo.tsx  AssetLoadingOverlay.tsx  CameraPanel.module.css  CameraPanel.tsx  CameraPresets.module.css  CameraPresets.tsx  ControlsNotice.module.css  ControlsNotice.tsx  ErrorBoundary.module.css  ErrorBoundary.tsx  FrameSelector.module.css  FrameSelector.tsx  InfoPanel.module.css  InfoPanel.tsx  Layout.module.css  Layout.tsx  LearnDialog.module.css  (+21 more)
src/config/: assets.ts  project.ts  starmaps.ts
src/hooks/: useEphemeris.ts  useMissionTime.ts  useSceneModel.test.ts  useSceneModel.ts  useTrajectory.ts
src/lib/: analytics.ts  gravity.ts  time.ts
src/store/: missionStore.ts
tests/: test_science_data.py
(+13 files in other folders)
