[project]
name = "artemis-2-data"
version = "0.1.0"
description = "Build-time data pipeline for Artemis 2 Tracker"
requires-python = ">=3.11"
dependencies = [
    "spiceypy>=6.0.0",
    "requests>=2.32.0",
    "numpy>=2.0.0",
    "tqdm>=4.66.0",
    "scipy>=1.14.0",
    "pillow>=12.2.0",
]

[tool.uv]
dev-dependencies = []
